// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MErrorMessage should render correctly collapsed 1`] = `
<div>
    <div class="m-message m--has-error m--is-skin-regular">
        <div class="m-message__wrap">
            <div class="m-message__icon">
                <svg aria-hidden="true" width="1em" height="1em" class="m-icon">
                    <use xlink:href="#error" aria-hidden="true"></use>
                </svg>
            </div>
            <div class="m-message__body">
                <div class="m-message__body__content"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
            </div>
        </div>
    </div>
    <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
    <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
    <article class="m-accordion m--is-light m--is-closed m--has-icon-left m--has-icon-large">
        <div tabindex="0" id="uuid" role="tab" aria-controls="uuid-controls" class="m-accordion__header m--has-padding">
            <div class="m-accordion__header__content"><span><span class="m-i18n">Détails de l'erreur</span></span> <span class="m-i18n m-accordion__hidden">m-accordion:open</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large m--has-border"></span></div>
    </article>
    <a href="/" class="m-link"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span>
    </a>
</div>
`;

exports[`MErrorMessage should render correctly expanded 1`] = `
<div>
    <div class="m-message m--has-error m--is-skin-regular">
        <div class="m-message__wrap">
            <div class="m-message__icon">
                <svg aria-hidden="true" width="1em" height="1em" class="m-icon">
                    <use xlink:href="#error" aria-hidden="true"></use>
                </svg>
            </div>
            <div class="m-message__body">
                <div class="m-message__body__content"><span class="m-i18n">Un problème technique s'est produit et empêche la tâche en cours de s'achever normalement.</span></div>
            </div>
        </div>
    </div>
    <p><span class="m-i18n">Vous pouvez attendre quelques minutes et réessayer.</span></p>
    <p><span class="m-i18n">Si le problème persiste, vous pouvez contacter le soutien technique en leur fournissant le détail de l'erreur.</span></p>
    <div skin="light"><span><span class="m-i18n">Détails de l'erreur</span></span>
        <p><strong><span class="m-i18n">Navigateur</span>: </strong>modul-user-agent</p>
        <p><strong><span class="m-i18n">No référence de l'erreur</span>: </strong>123456879</p>
        <p><span class="m-i18n">Elle a eu lieu le <strong>2018-01-02</strong> à <strong>00:01:02</strong></span></p>
    </div>
    <a href="/" class="m-link"> <span class="m-link__text"><span class="m-i18n">Pour obtenir de l'aide, contactez le soutien technique</span></span>
    </a>
</div>
`;
